[gd_scene load_steps=40 format=2]

[ext_resource path="res://Images/Ground.png" type="Texture" id=1]
[ext_resource path="res://Images/Player.png" type="Texture" id=2]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Images/Ground_small.png" type="Texture" id=4]
[ext_resource path="res://Images/Portal.png" type="Texture" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]
[ext_resource path="res://Pre_portal.gd" type="Script" id=7]
[ext_resource path="res://Images/pre_portal.png" type="Texture" id=8]
[ext_resource path="res://Images/Ennemy.png" type="Texture" id=9]
[ext_resource path="res://Ennemy.gd" type="Script" id=10]
[ext_resource path="res://Images/laser.png" type="Texture" id=11]
[ext_resource path="res://Images/laser_head.png" type="Texture" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=2]
0/name = "Ground.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=4]
resource_name = "Horizontal"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -25, 0 ), Vector2( 25, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Vertical"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, 10 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Horizontal"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -25, 0 ), Vector2( 25, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Vertical"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, 10 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 4 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 0, 120, 40, 40 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 4, 4 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2, 2 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 2
emission_box_extents = Vector3( 3, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.392157, 0.823529, 0.901961, 1 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.392157, 0.823529, 0.901961, 1 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 1, 3 )

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0 )

[node name="Moving platform2" type="Position2D" parent="."]
position = Vector2( 9.2703, -50.3245 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Moving platform2"]
position = Vector2( 25, 0 )

[node name="Sprite" type="Sprite" parent="Moving platform2/KinematicBody2D2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moving platform2/KinematicBody2D2"]
shape = SubResource( 3 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving platform2/KinematicBody2D2"]
autoplay = "Vertical"
anims/Horizontal = SubResource( 4 )
anims/Vertical = SubResource( 5 )

[node name="Moving platform" type="Position2D" parent="."]
position = Vector2( 28.3406, -74.1624 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Moving platform"]
position = Vector2( 25, 0 )

[node name="Sprite" type="Sprite" parent="Moving platform/KinematicBody2D2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moving platform/KinematicBody2D2"]
shape = SubResource( 3 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving platform/KinematicBody2D2"]
autoplay = "Horizontal"
anims/Horizontal = SubResource( 6 )
anims/Vertical = SubResource( 7 )

[node name="Small platform" type="KinematicBody2D" parent="."]
position = Vector2( 14, -15 )

[node name="Sprite" type="Sprite" parent="Small platform"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Small platform"]
shape = SubResource( 8 )
one_way_collision = true

[node name="Small platform2" type="KinematicBody2D" parent="."]
position = Vector2( 22, -15 )

[node name="Sprite" type="Sprite" parent="Small platform2"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Small platform2"]
shape = SubResource( 8 )
one_way_collision = true

[node name="Platform" type="KinematicBody2D" parent="."]
position = Vector2( 9.54594, -34.0416 )

[node name="Sprite" type="Sprite" parent="Platform"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 9 )
one_way_collision = true

[node name="Portal1" type="Area2D" parent="."]
position = Vector2( -80.7247, -16.2629 )
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal1"]
frames = SubResource( 16 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal1"]
shape = SubResource( 21 )

[node name="Portal2" type="Area2D" parent="."]
position = Vector2( -80.0462, -62.6549 )
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal2"]
frames = SubResource( 16 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal2"]
shape = SubResource( 21 )

[node name="Player" type="KinematicBody2D" parent="." groups=["laser_kill"]]
position = Vector2( 0, -10 )
z_index = 3
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 12 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 2 )
shape = SubResource( 13 )

[node name="Particles2D_move" type="Particles2D" parent="Player"]
position = Vector2( 0, 4 )
amount = 10
lifetime = 0.5
randomness = 0.3
local_coords = false
process_material = SubResource( 14 )

[node name="Particles2D_move2" type="Particles2D" parent="Player"]
position = Vector2( 0, 2 )
emitting = false
amount = 40
lifetime = 0.5
randomness = 0.3
local_coords = false
process_material = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -10 )
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true

[node name="Timer_dash" type="Timer" parent="Player"]
wait_time = 0.2
one_shot = true

[node name="Pre_portal" type="Sprite" parent="Player"]
texture = ExtResource( 8 )
script = ExtResource( 7 )

[node name="Ennemy" type="KinematicBody2D" parent="." groups=["laser_kill"]]
position = Vector2( -43.852, -10.9134 )
z_index = 2
collision_layer = 3
collision_mask = 3
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ennemy"]
frames = SubResource( 24 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ennemy"]
position = Vector2( 0, 2 )
shape = SubResource( 25 )

[node name="Position2D" type="Position2D" parent="Ennemy"]

[node name="Ground_detection" type="Area2D" parent="Ennemy/Position2D"]
position = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ennemy/Position2D/Ground_detection"]
shape = SubResource( 26 )

[node name="Wall_detection" type="Area2D" parent="Ennemy/Position2D"]
position = Vector2( 5, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ennemy/Position2D/Wall_detection"]
shape = SubResource( 27 )

[node name="Laser" type="Position2D" parent="."]
position = Vector2( 0, 31 )
scale = Vector2( 31, 1 )

[node name="Laser" type="Sprite" parent="Laser"]
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="LaserHead2" type="Sprite" parent="Laser/Laser"]
position = Vector2( -4.12903, 0 )
scale = Vector2( 0.0322581, 1 )
texture = ExtResource( 12 )
flip_h = true

[node name="LaserHead" type="Sprite" parent="Laser/Laser"]
position = Vector2( 4.12903, 0 )
scale = Vector2( 0.0322581, 1 )
texture = ExtResource( 12 )

[connection signal="body_entered" from="Portal1" to="." method="_on_Portal1_body_entered"]
[connection signal="body_exited" from="Portal1" to="." method="_on_Portal1_body_exited"]
[connection signal="body_entered" from="Portal2" to="." method="_on_Portal2_body_entered"]
[connection signal="body_exited" from="Portal2" to="." method="_on_Portal2_body_exited"]
[connection signal="timeout" from="Player/Timer_dash" to="Player" method="_on_Timer_dash_timeout"]
